# technical-solutions-temp

./: .gitignore  README.md
STIX/: mapping.txt  stixbundle.json
getMaliciousSenders/: README.md  main.py  malicious-senders-20250711_231013.txt  req.sh  resp.json
getUserReportedMessages/: .gitignore  README.md  requirements.txt  user_report_export.py
huntWithNewCoreFeedRules/: README.md  (+1 more)
sublime-migration-cli/: .gitignore  README.md  pyproject.toml
sublime-migration-cli/src/sublime_migration_cli/: __init__.py  __main__.py  cli.py
sublime-migration-cli/src/sublime_migration_cli/api/: client.py  regions.py
sublime-migration-cli/src/sublime_migration_cli/commands/export/: __init__.py  actions.py  all.py  exclusions.py  feeds.py  lists.py  organization.py  rules.py  utils.py
sublime-migration-cli/src/sublime_migration_cli/commands/get/: __init__.py  actions.py  exclusions.py  feeds.py  lists.py  rules.py
sublime-migration-cli/src/sublime_migration_cli/commands/migrate/: __init__.py  actions.py  actions_to_rules.py  all.py  exclusions.py  feeds.py  lists.py  rule_exclusions.py  rules.py
sublime-migration-cli/src/sublime_migration_cli/commands/report/: __init__.py  compare.py
sublime-migration-cli/src/sublime_migration_cli/models/: action.py  exclusion.py  feed.py  list.py  organization.py  rule.py
sublime-migration-cli/src/sublime_migration_cli/presentation/: base.py  factory.py  interactive.py  json_output.py  markdown.py
sublime-migration-cli/src/sublime_migration_cli/utils/: __init__.py  api.py  config.py  errors.py  filtering.py  validation.py
(+15 files in other folders)
