[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sublime-migration-cli"
version = "0.1.0"
authors = [
    {name = "Melissa Hale", email = "melissa@sublimesecurity.com"},
]
description = "Migration CLI utility for Sublime Security Platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "tabulate>=0.8.9",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
sublime = "sublime_migration_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}